# api-lib

./: .coveragerc  .gitignore  Makefile  README.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: lint_and_test.yaml  publish.yaml  tagging.yaml
api_lib/: api_lib.py  method.py
api_lib/from_specs/: __main__.py  lib.py
api_lib/from_specs/objects/: components.py  infos.py  parser.py  paths.py  specs.py  tags.py
api_lib/objects/: response.py
src/: api_lib.py  header.py  http_method.py  pyproject.toml
src/objects/: __init__.py  request.py  response.py
test/: .env  conftest.py  hoprd_api.py  pyproject.toml  test_api_lib.py
test/config/: github_api.py  request.py  response.py  rest_api.py
test/objects/: request.py  response.py
test/test_headers/: test_accept.py  test_header.py
test/test_objects/: test_request.py  test_response.py
